--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.use_sql_comments=false
 spring.jpa.properties.hibernate.format_sql=false
+
+# Logging Execution enabled
+logging.active = true
+logging.level.org.springframework.web = DEBUG
+
